Fix perspectives needing to be serialized